# projetoOrganizaManga

./: .gitignore  OrganizaManga.spec  README.md  main.py  pyproject.toml
controller/: MangaController.py
model/: Autor.py  Capitulo.py  ConfigManga.py  Manga.py  MangaService.py  Pagina.py  Volume.py
model/bd/: CapituloDao.py  CapituloDaoImpl.py  ConfigMangaDao.py  ConfigMangaDaoImpl.py  MangaDao.py  MangaDaoImpl.py  VolumeDao.py  VolumeDaoImpl.py
view/: BaseView.py  Tela.py  TelaBaixaCapa.py  TelaConfig.py  TelaConfigManga.py  TelaConverteManga.py  TelaMenu.py  TelaSel.py
