[project]
name = "organiza-manga"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "customtkinter>=5.2.2",
    "dotenv>=0.9.9",
    "mysql-connector-python>=9.6.0",
    "pathlib>=1.0.1",
    "requests>=2.33.1",
    "sqlalchemy>=2.0.49",
]
